# brave-core

./: package.json
browser/: BUILD.gn  brave_browser_main_parts.cc  brave_content_browser_client.cc  brave_profile_prefs.cc
browser/brave_ads/notifications/: platform_bridge.cc
browser/brave_rewards/: checkout_dialog.cc  checkout_dialog.h  rewards_service_factory.cc  rewards_service_factory.h
browser/ephemeral_storage/: ephemeral_storage_tab_helper.cc  ephemeral_storage_tab_helper.h
browser/extensions/api/: brave_rewards_api.cc
browser/ipfs/test/: BUILD.gn
browser/profiles/: brave_profile_manager.cc
browser/ui/webui/: brave_checkout_ui.cc  brave_webui_source.cc
browser/ui/webui/settings/: brave_default_extensions_handler.cc  brave_default_extensions_handler.h
chromium_src/chrome/browser/: about_flags.cc
chromium_src/chrome/browser/ui/views/payments/: payment_request_dialog_view.cc
chromium_src/components/payments/content/: payment_request.cc  payment_request.h  payment_request_state.cc
chromium_src/content/public/browser/: tld_ephemeral_lifetime.h
chromium_src/extensions/common/permissions/: api_permission.h
common/: BUILD.gn
common/extensions/api/: _ipfs_api_features.json  _permission_features.json  brave_rewards.json
components/binance/browser/: binance_service.h
components/brave_adblock_ui/components/: customSubscriptions.tsx
components/brave_ads/browser/: ads_service_impl.cc
components/brave_new_tab_ui/components/default/gridSites/: index.ts
components/brave_rewards/browser/: BUILD.gn  rewards_service_impl.cc  switches.cc  switches.h
components/brave_rewards/browser/test/: rewards_state_browsertest.cc
components/brave_rewards/common/: BUILD.gn  constants.cc  constants.h
components/brave_rewards/resources/checkout/: brave_rewards_checkout.tsx
components/brave_rewards/resources/checkout/components/: app.tsx
components/brave_rewards/resources/checkout/lib/: formatting.ts  host.ts  interfaces.ts
components/brave_rewards/resources/extension/brave_rewards/_locales/ja/: messages.json
components/brave_rewards/resources/shared/components/onboarding/: rewards_tour.tsx
components/brave_rewards/resources/shared/components/onboarding/stories/: index.tsx
components/brave_rewards/resources/ui/components/checkout/dialogFrame/: index.tsx  style.ts
components/brave_rewards/resources/ui/components/checkout/orderSummary/: index.tsx  style.ts
components/brave_rewards/resources/ui/components/checkout/paymentComplete/: index.tsx
components/brave_rewards/resources/ui/components/checkout/useWalletPanel/: index.tsx
components/brave_shields/browser/: ad_block_subscription_service_manager.cc  ad_block_subscription_service_manager.h
components/brave_wallet/: brave_wallet_service.cc
components/brave_wallet/browser/: brave_wallet_service.cc
components/ipfs/test/: BUILD.gn
components/payments/content/: bat_payment_app.cc
components/permissions/: BUILD.gn  permission_expiration_key.cc  permission_expiration_key.h  permission_expirations.cc  permission_expirations_unittest.cc
components/resources/: brave_components_strings.grd
components/resources/strings/: brave_components_resources_ja.xtb
patches/: components-payments-content-BUILD.gn.patch  components-payments-content-payment_request.h.patch
test/: BUILD.gn
ui/brave_ads/: BUILD.gn  DEPS  ad_notification_view.cc  ad_notification_view.h  notification_background_painter.cc  notification_background_painter.h  notification_body_view.cc  notification_body_view.h  notification_buttons_view.cc  notification_buttons_view.h  notification_title_view.cc  notification_title_view.h  notification_view.cc  notification_view.h  notification_view_factory.cc  notification_view_factory.h  notification_widget.cc  notification_widget.h  notification_widget_mac.mm  notification_widget_win.cc  padded_image.cc  padded_image.h  padded_image_button.cc  padded_image_button.h
ui/brave_ads/public/cpp/: constants.h  notification_delegate.cc  notification_delegate.h
(+2 files in other folders)
