# Copyright (c) 2020 The Brave Authors. All rights reserved.
# This Source Code Form is subject to the terms of the Mozilla Public
# License, v. 2.0. If a copy of the MPL was not distributed with this file,
# You can obtain one at http://mozilla.org/MPL/2.0/.

import("//build/config/features.gni")
import("//build/config/ui.gni")
import("//testing/test.gni")
import("//ui/base/ui_features.gni")

source_set("brave_ads") {
  if (is_win || is_linux || is_mac) {
    deps = [
      "//base",
      "//ui/base",
      "//ui/strings",
      "//url",
    ]

    deps += [
      "//brave/app/theme:brave_theme_resources",
      "//brave/app/theme:brave_unscaled_resources",
      "//brave/app/vector_icons",
      "//brave/ui/brave_ads/public/cpp" ,
      "//base:i18n",
      "//base/third_party/dynamic_annotations",
      "//components/url_formatter",
      "//skia",
      "//ui/accessibility",
      "//ui/display",
      "//ui/events",
      "//ui/gfx",
      "//ui/gfx/geometry",
      "//ui/native_theme",
      "//ui/resources",
    ]

    if (is_win) {
      deps += [
        "//ui/aura",
        "//ui/wm/public",
      ]
    }

    sources = [
      "ad_notification_view.cc",
      "ad_notification_view.h",
      "notification_background_painter.cc",
      "notification_background_painter.h",
      "notification_body_view.cc",
      "notification_body_view.h",
      "notification_buttons_view.cc",
      "notification_buttons_view.h",
      "notification_title_view.cc",
      "notification_title_view.h",
      "notification_view.cc",
      "notification_view.h",
      "notification_view_factory.cc",
      "notification_view_factory.h",
      "notification_widget.cc",
      "notification_widget.h",
      "padded_image_button.cc",
      "padded_image_button.h",
      "padded_image.cc",
      "padded_image.h",
    ]

    if (is_mac) {
      sources += [ "notification_widget_mac.mm" ]
    }

    if (is_win) {
      sources += [ "notification_widget_win.cc" ]
    }

    deps += [
      "//ui/compositor",
      "//ui/events",
      "//ui/views",
    ]
  }

  if (is_mac) {
    frameworks = [
      "AppKit.framework",
      "Foundation.framework",
    ]
  }
}
